# voxcut-video-editor

./: API.md  ARCHITECTURE.md  BUILD_SUMMARY.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  setup.sh
app/: page.tsx
backend/: .env  .env.example  job_manager.py  main.py  processing_tasks.py  pyproject.toml  requirements.txt  video_editor.py  video_processor.py
frontend/: .env.example  Dockerfile.dev  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/Editor/: AIEnhancePanel.tsx  AudioPanel.tsx  CaptionsEditor.tsx  EffectsPanel.tsx  ProcessingOverlay.tsx  PropertiesPanel.tsx  TextPanel.tsx  Timeline.tsx  Toolbar.tsx  VideoPreview.tsx  VoiceCommandBar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: EditorPage.tsx  PreviewPage.tsx  ProcessingPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: editorStore.ts
frontend/src/utils/: format.ts
