[project]
name = "voxcut-backend"
version = "0.1.0"
description = "AI-powered video editing backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "openai-whisper>=20231117",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[tool.uv]
python-version = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
